# wareflow-ems

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  test_base_classes.py  test_constants.py  test_ctk_headless.py  wareflow-ems.spec
.claude/: settings.local.json
.github/workflows/: README.md  build.yml  ci.yml  pr-checks.yml  release.yml  test.yml
bootstrapper/: __init__.py
bootstrapper/templates/: README.md.template  config.json.template
docs/: CUSTOMTKINTER_MIGRATION.md  DEVELOPMENT_PLAN.md  MODELS.md  PHASE_0_DETAILED.md  RELEASE_GUIDE.md  VALIDATORS.md
docs/issues/: ISSUE-026_multi_company_deployment.md  ISSUE-027_requires_python_runtime.md  ISSUE-028_manual_configuration_required.md  ISSUE-029_json_not_user_friendly.md  ISSUE-030_no_gui_config_editor.md  ISSUE-031_no_automatic_updates.md  ISSUE-032_no_diagnostic_tools.md  ISSUE-033_cli_name_not_intuitive.md  ISSUE-034_no_interactive_setup.md  ISSUE-035_no_migration_path.md  ISSUE-036_config_format_change_breaks_setups.md  ISSUE-037_no_automated_build_pipeline.md  ISSUE-038_smartscreen_blocks_unsigned_exe.md  ISSUE-039_no_installer.md  ISSUE-040_missing_test_coverage.md  ISSUE-041_no_user_documentation.md  ISSUE-042_no_troubleshooting_guide.md  ISSUE-043_no_structured_release_process.md  ISSUE-044_automated_release_pipeline.md  ISSUE-045_multi_project_gui_management.md  ISSUE-046_missing_ui_views.md  (+15 more)
scripts/: create_test_db.py  test_caces_form.py  test_excel_import.py  test_excel_import_integration.py  test_migration.py  test_phase_3.py  validate_phase_0.py
src/: cli_main.py  main_exe.py  version_info.py
tests/: conftest.py  test_auth.py  test_backup_manager.py  test_backup_service.py  test_data_exporter.py  test_export_controller.py  test_export_dialog.py  test_performance_logger.py  test_query_performance.py  test_validation.py
(+113 files in other folders)
